Module9/ingress2paths/openstackbirthday.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: webk8sbirthday-v2-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: webk8sbirthday-v2
    spec:
      containers:
      - name: k8s-demo
        image: archyufa/webk8sbirthday:1.0.2
        ports:
        - name: port
          containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: webk8sbirthday-v2
spec:
  type: NodePort
  ports:
  - port: 8080
    nodePort: 30304
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: webk8sbirthday-v2
